<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:padding="@dimen/LPM"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:background="@drawable/background_gradient_white_cone"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="24sp"
            android:text="@string/mock_job_offer"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginEnd="@dimen/LPEL"
            android:layout_marginTop="@dimen/LPS"
            android:textSize="14sp"
            android:text="@string/mock_bottom_sheet_mock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/background_gradient_black"
            android:layout_marginTop="@dimen/LPM"
            android:padding="@dimen/LPM"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/mock_apply_bottom_sheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="@dimen/LPSS"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/mock_yearly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:padding="@dimen/LPM"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:text="@string/mock_apply_bottom_sheet_decline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>