<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginHorizontal="@dimen/LPL"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <HorizontalScrollView
        android:layout_marginTop="@dimen/LPM"
        android:scrollbars="none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!-- Non static -->
            <LinearLayout
                android:id="@+id/menu1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/activityIconSquare"
                android:layout_height="@dimen/activityIconSquare">
                <TextView
                    android:textSize="@dimen/activityIconSize"
                    android:text="@string/icon_dollar_sign"
                    android:fontFamily="@font/fasb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/LPSS"
                    android:textSize="@dimen/activityIconName"
                    android:text="@string/mock_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <!-- Non static -->
            <LinearLayout
                android:id="@+id/menu2"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/activityIconSquare"
                android:layout_height="@dimen/activityIconSquare">
                <TextView
                    android:textSize="@dimen/activityIconSize"
                    android:text="@string/icon_running"
                    android:fontFamily="@font/fasb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/LPSS"
                    android:textSize="@dimen/activityIconName"
                    android:text="@string/mock_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <!-- Non static -->
            <LinearLayout
                android:layout_marginHorizontal="@dimen/LPS"
                android:id="@+id/menu3"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/activityIconSquare"
                android:layout_height="@dimen/activityIconSquare">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@mipmap/ic_wallet"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:visibility="gone"
                    android:textColor="@color/white800"
                    android:textSize="@dimen/activityIconSize"
                    android:text="@string/icon_briefcase"
                    android:fontFamily="@font/fasb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="@color/black900"
                    android:textSize="12sp"
                    android:text="@string/dashboard_find_job"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <!-- static -->
            <LinearLayout
                android:id="@+id/menu4"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/activityIconSquare"
                android:layout_height="@dimen/activityIconSquare">
                <TextView
                    android:textSize="@dimen/activityIconSize"
                    android:text="@string/icon_travel_map"
                    android:fontFamily="@font/fasb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/LPSS"
                    android:textSize="@dimen/activityIconName"
                    android:text="@string/dashboard_activities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Static -->
            <LinearLayout
                android:id="@+id/menu5"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="@dimen/activityIconSquare"
                android:layout_height="@dimen/activityIconSquare">
                <TextView
                    android:textSize="@dimen/activityIconSize"
                    android:text="@string/icon_tools"
                    android:fontFamily="@font/fasb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="@dimen/LPSS"
                    android:textSize="@dimen/activityIconName"
                    android:text="@string/dashboard_other_activities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_marginTop="@dimen/LPS"
        android:id="@+id/containerScrollIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:background="@color/black800"
            android:layout_width="24dp"
            android:layout_height="3dp"/>
        <View
            android:visibility="gone"
            android:layout_marginStart="@dimen/LPS"
            android:background="@color/black900"
            android:layout_width="24dp"
            android:layout_height="3dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/noActivitiesLabel"
        android:visibility="gone"
        android:text="@string/dashboard_no_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>