<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/LPM"
        android:id="@+id/userMoneyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:visibility="gone"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black900"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/dashboard_wallet"/>
            <TextView
                android:layout_marginTop="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black900"
                android:textSize="11sp"
                android:letterSpacing="1"
                android:fontFamily="@font/fasb"
                android:text="@string/mock_account"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/userLeftFragmentView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/userRightFragmentView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_balance"
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="@color/black700"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fasb"
                    android:text="@string/icon_dollar_sign"
                    android:textSize="24sp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/black800" />
                <TextView
                    android:id="@+id/userMoney"
                    android:textColor="@color/black900"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mock_number"
                    android:textSize="24sp"
                    android:fontFamily="@font/open_sans_bold"
                    android:layout_marginBottom="1dp"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/userRightFragmentView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/userLeftFragmentView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">
            <TextView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="@dimen/LPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fasb"
                android:text="@string/icon_history"
                android:textSize="18sp"
                android:textColor="@color/black700" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>