<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="@dimen/LPM"
        android:layout_marginHorizontal="@dimen/LPM"
        android:background="@drawable/background_gradient_black"
        android:paddingHorizontal="@dimen/LPM"
        android:paddingVertical="@dimen/LPS"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/dashboard_owned_property"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/white900"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="@dimen/LPS"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginEnd="@dimen/LPSS"
                android:text="@string/icon_dollar_sign"
                android:fontFamily="@font/fasb"
                android:textColor="@color/white800"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/mock_number"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/white800"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:elevation="3dp"
        android:layout_marginHorizontal="@dimen/LPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ownedPropertyContainer"
            android:paddingVertical="@dimen/LPM"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/labelOwnedPropertyHouse"
                android:textSize="18sp"
                android:text="@string/dashboard_house"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/propertyHouseManage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelOwnedPropertyHouse"
                android:textSize="11sp"
                android:text="@string/dashboard_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="@dimen/LPS"
                android:fontFamily="@font/fasb"
                android:layout_marginTop="@dimen/LP1"
                app:layout_constraintBottom_toBottomOf="@id/propertyHouseManage"
                app:layout_constraintLeft_toRightOf="@id/propertyHouseManage"
                app:layout_constraintTop_toTopOf="@id/propertyHouseManage"
                android:textSize="11sp"
                android:text="@string/icon_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/totalOwnedHouseProperty"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="34sp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/mock_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            app:layout_constraintTop_toBottomOf="@id/ownedPropertyContainer"
            app:layout_constraintBottom_toTopOf="@id/ownedVehicleContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white800"
            android:layout_marginHorizontal="@dimen/LPEM"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ownedVehicleContainer"
            android:paddingVertical="@dimen/LPM"
            app:layout_constraintTop_toBottomOf="@id/ownedPropertyContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/labelOwnedPropertyCar"
                android:textSize="18sp"
                android:text="@string/dashboard_car"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/propertyCarManage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelOwnedPropertyCar"
                android:textSize="11sp"
                android:text="@string/dashboard_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginStart="@dimen/LPS"
                android:fontFamily="@font/fasb"
                android:layout_marginTop="@dimen/LP1"
                app:layout_constraintBottom_toBottomOf="@id/propertyCarManage"
                app:layout_constraintLeft_toRightOf="@id/propertyCarManage"
                app:layout_constraintTop_toTopOf="@id/propertyCarManage"
                android:textSize="11sp"
                android:text="@string/icon_arrow_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/totalOwnedCarProperty"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="34sp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/mock_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>