<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="@dimen/LPM"
        android:paddingHorizontal="@dimen/LPM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/actionPoints"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/totalSpendPoints"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dashboard_total_spend_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:textSize="32sp"
                android:text="@string/mock_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:visibility="gone"
            android:layout_marginVertical="@dimen/LPM"
            android:background="@drawable/background_gradient_dark_blue_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/actionPoints"
            app:layout_constraintRight_toLeftOf="@id/totalSpendPoints"
            android:layout_width="1dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/totalSpendPoints"
            android:layout_marginStart="@dimen/LPM"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/availableSpendPoint"
            app:layout_constraintLeft_toRightOf="@id/actionPoints"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dashboard_total_spend"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:textSize="64sp"
                android:text="@string/mock_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dashboard_action_day_info"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/availableSpendPoint"
            android:layout_marginStart="@dimen/LPM"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/totalSpendPoints"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/dashboard_available_spend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:textSize="32sp"
                android:text="@string/mock_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>